templates/sg.yml
AWSTemplateFormatVersion: 2010-09-09

Parameters:
  Prefix:
    Type: String
  Environment:
    Type: String
    Default: production
    AllowedValues:
      - production
  VPCStackName:
    Type: String

Resources:
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "ALB Security Group"
      VpcId:
        Fn::ImportValue:
          Fn::Join: ["-", [Ref: VPCStackName, "VPC"]]
      # HTTPS (443) のインバウンドを許可
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        # 証明書のデプロイ成功したらこのHTTPアクセス削除
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value:
            Fn::Join: ["-", [Ref: Prefix, Ref: Environment, "alb"]]

  ApplicationSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Application Security Group"
      VpcId:
        Fn::ImportValue:
          Fn::Join: ["-", [Ref: VPCStackName, "VPC"]]
      # HTTP (80), HTTP (8080) のインバウンドを許可
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId:
            Ref: ALBSecurityGroup
      Tags:
        - Key: Name
          Value:
            Fn::Join: ["-", [Ref: Prefix, Ref: Environment, "application"]]

  CodeBuildSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "CodeBuild Security Group"
      VpcId:
        Fn::ImportValue:
          Fn::Join: ["-", [Ref: VPCStackName, "VPC"]]
      Tags:
        - Key: Name
          Value:
            Fn::Join: ["-", [Ref: Prefix, Ref: Environment, "codebuild"]]

Outputs:
  ALBSecurityGroup:
    Value:
      Ref: ALBSecurityGroup
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-ALBSecurityGroup"

  ApplicationSecurityGroup:
    Value:
      Ref: ApplicationSecurityGroup
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-ApplicationSecurityGroup"

  CodeBuildSecurityGroup:
    Value:
      Ref: CodeBuildSecurityGroup
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-CodeBuildSecurityGroup"
